Bug 141967 - Crash when closing Asian Phonetic Guide (gtk3)
Summary: Crash when closing Asian Phonetic Guide (gtk3)
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.2.0
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2021-04-29 07:49 UTC by Julien Nabet
Modified: 2021-04-29 16:44 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (10.63 KB, text/plain)
2021-04-29 07:50 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2021-04-29 07:49:27 UTC
Description:
On pc Debian x86-64 with master sources updated today, I got a crash when closing Asian Phonetic Guide with gtk3)
(I don't reproduce this with kf5 or gen renderings).

Steps to Reproduce:
1. Launch Writer
2. Format/Asian Phonetic Guide...
3. Close dialog

Actual Results:
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 78ad3fe28321a9e2e4eaa0dcc8f1ccdaed0b1f79
CPU threads: 12; OS: Linux 5.10; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Calc: threaded
Comment 1 Julien Nabet 2021-04-29 07:50:27 UTC
Created attachment 171494 [details]
bt with debug symbols

In addition, I noticed this on console:
warn:legacy.osl:20041:20041:sfx2/source/control/bindings.cxx:1056: suspicious Toggle-Slot
Comment 2 Julien Nabet 2021-04-29 07:51:15 UTC
Caolán: since it's specific to gtk3, thought you might be interested in this one.
Comment 3 Julien Nabet 2021-04-29 09:02:48 UTC
Interestingly, I got a crash when typing "Esc" to close the dialog box.
I don't reproduce the crash when clicking on "Close button" or "Apply" button.
Also, if I click "Apply" button then type "Esc" to close the dialog box, I don't get the crash.
Comment 4 Julien Nabet 2021-04-29 11:43:09 UTC
After a question from Roman on tdf#141963 "F5 shortcut for navigator don't close navigator window", I must also tell that I use x11 (thought I used wayland).
Perhaps it's related.
Comment 5 Commit Notification 2021-04-29 15:58:22 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/04f72656705905be13a006004dc18ac6cff4832b

tdf#141967 bail early in Activate if disposing

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2021-04-29 15:58:52 UTC
that should do it
Comment 7 Julien Nabet 2021-04-29 16:44:43 UTC
warn:legacy.osl:114247:114247:sfx2/source/control/bindings.cxx:1056: suspicious Toggle-Slot is still there but it must be not related.
Anyway, I don't reproduce the crash anymore, that's the essential, thank you for the quick fix! :-)