tdf#141967 bail early in Activate if disposing

because focus bounces around the dialog as its being torn down widget
by widget

Change-Id: I2afd094bb13929c25268168175c142ca8e0074e1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/114880
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>